--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.2",
     "axios": "^1.3.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
