--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.2",
+    "@types/sass": "^1.45.0",
     "axios": "^1.3.5",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
